# Helios

./: .gitignore  .gitmodules  README.md  app.py  infer_helios.py  install.sh  pyproject.toml  requirements.txt  train_helios.py
eval/: requirements.txt
helios/diffusers_version/: pipeline_helios_diffusers.py  transformer_helios_diffusers.py
helios/pipelines/: pipeline_helios.py  pipeline_helios_ode.py
scripts/inference/: helios-base_i2v.sh  helios-base_t2v.sh  helios-base_v2v.sh  helios-distilled_i2v.sh  helios-distilled_t2v.sh  helios-distilled_v2v.sh  helios-mid_i2v.sh  helios-mid_t2v.sh  helios-mid_v2v.sh
scripts/training/configs/: stage_1_init.yaml  stage_2_init.yaml  stage_2_post.yaml  stage_3_ode.yaml  stage_3_post.yaml  stage_3_post_gan_version.yaml  stage_3_post_self-forcing_version.yaml
tools/: bench_memfof_fps.py  bench_raft_fps.py  bench_sam2_fps.py  eval_diversity.py  flow_viz.py  gen_n_videos.py  mask_flow.py  mask_with_sam2.py  measure_chunk_correlation.py  progressive_pruning.py  sam2_common.py  sam2_track_and_viz.py  select_diverse_videos.py  test_sam2_incremental.py  track_videos_with_sam2.py  track_videos_with_sam2_native.py  visualize_diversity.py
