[project]
name = "helios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.12.0",
    "deepspeed==0.18.4",
    "diffusers",
    "einops>=0.8.2",
    "ftfy>=6.3.1",
    "gradio>=6.11.0",
    "hf-doc-builder>=0.5.0",
    "huggingface-hub[cli]==1.4.1",
    "imageio-ffmpeg>=0.6.0",
    "kernels>=0.12.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "mpi4py>=4.1.1",
    "ninja>=1.13.0",
    "numpy<2.0.0",
    "nvitop>=1.6.2",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "peft==0.18.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers==5.2.3",
    "spaces>=0.48.1",
    "tf-keras>=2.15.0",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchdata>=0.10.0",
    "torchvision==0.25.0",
    "transformers==5.3.0",
    "triton==3.6.0",
    "video-reader-rs==0.4.1",
    "wandb==0.23.0",
    "zstandard==0.25.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
triton = { index = "pytorch-cu130" }
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
