[project]
name = "helios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.12.0",
    "decord>=0.6.0",
    "deepspeed==0.18.4",
    "diffusers",
    "einops>=0.8.2",
    "ftfy>=6.3.1",
    "gradio>=6.11.0",
    "hf-doc-builder>=0.5.0",
    "huggingface-hub[cli]==1.4.1",
    "hydra-core>=1.3.2",
    "imageio-ffmpeg>=0.6.0",
    "iopath>=0.1.10",
    "kernels>=0.12.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "mpi4py>=4.1.1",
    "ninja>=1.13.0",
    "numpy<2.0.0",
    "nvitop>=1.6.2",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "peft==0.18.1",
    "portalocker>=2.10.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers==5.2.3",
    "setuptools>=70.2.0",
    "spaces>=0.48.1",
    "tf-keras>=2.15.0",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchdata>=0.10.0",
    "torchvision==0.25.0",
    "transformers==5.3.0",
    "triton==3.6.0",
    "video-reader-rs==0.4.1",
    "wandb==0.23.0",
    "zstandard==0.25.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
triton = { index = "pytorch-cu130" }
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
# iopath: pytorch-cu130 only has 0.1.9; SAM2 requires >=0.1.10 (only on PyPI).
iopath = { index = "pypi" }

# Note: native SAM2 (./sam2 submodule, used by tools/track_videos_with_sam2_native.py)
# is NOT listed here because it uses setup.py without [project] metadata, which uv
# can't import as a workspace member. Install it manually after `uv sync`:
#   uv pip install --no-build-isolation -e ./sam2
# This is fine because sam-2 has no transitive deps that aren't already pinned above
# (setuptools, hydra-core, portalocker, iopath, decord, etc. are all in [project.dependencies]).
